--- a/index.html
+++ b/index.html
@@ -118,13 +118,41 @@
             <div class = "mmCtTop">
                 <div class = "center-text color-white">Информация</div>
             </div>
+            <div class = "mmItext center-text color-white">
+                Клавиатурный тренажер — это программа, предназначенная для обучения слепой печати, приобретения навыка десятипальцевого набора и увеличения скорости печати на клавиатуре компьютера. Клавиатурный тренажёр представляет собой учебный текстовый редактор для набора определенного текстового фрагмента, с системой подсказок во время набора на клавиатуре и функцией подсчёта различных метрик печати.
+            </div>
+            <div class = "mmCtBlock" style="padding-top: 47%;">
+                <div class="center-text color-white" style="width: 95%; left: 5px;">Контакты</div>
+        </div>
+            <div class = "mmIContacts">
+                <div class = "mmIContactsBlock">
+                    <a href="https://github.com/barbaratimson" target="_blank"><img class = "contactsImg" src="github-icon.svg"></a>
+                </div>
+                <div class = "mmIContactsBlock">
+                    <a href="https://vk.com/inferno_klv" target="_blank"><img class = "contactsImg" src="vk-icon.svg"></a>
+                </div>
+                <div class = "mmIContactsBlock">
+                    <a href="https://discordapp.com/users/358571176425029632" target="_blank"><img class = "contactsImg" src="discord-icon.svg"></a>
+                </div>
+            </div>
             <div class="mmInfoFooter center-text color-white">
                 Сергей Соколов 2023г.
             </div>
         </div>
+
+        <!-- fsdfsfsdfsdfsdfsfdasfasf -->
+
         <div class = "mmRightContainer"  id = "mmSettings">
             <div class = "mmCtTop">
                 <div class = "center-text color-white">Настройки</div>
+            </div>
+            <div class="mmSContainer">
+            <div class = "mmSblock">
+            <button class="btn btnTask center-text color-white" style="width: 600px; border: 1px solid var(--border-color);" id = "clearCache" onclick="localStorage.clear()">Сбросить статистику</button>
+            </div>
+            <!-- <div class = "mmSblock">
+            <button class="btn center-text color-white" id = "clearTasks">Отчистить папку с заданиями</button>
+            </div> -->
             </div>
         </div>
     </div>
