--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
 
     <nav id = "navbar">
-        <div id = "nav-center" class = "nav-section">
+        <div id = "nav-center" class = "nav-section" title = "Главное меню">
             <div class="color-white center-text" >Клавиатурный тренажер</div>
             </div>
     </nav>
